# Haskell-NN

./: CHANGELOG.md  NeuralNetwork.cabal  README.md  cabal.project.local  mnist.prof  run_iris.sh  run_mnist.sh  test.hs  test_depth.sh
benchmarks/: benchmark.hs  benchmark.py  benchmark_epoch_batches.sh
benchmarks/test_stats/: depth_neurons.csv  epochs_batch.txt
examples/IRIS/: iris.hs  iris.py  iris_results.txt
examples/MNIST/: mnist.hs  mnist.py  mnist_results.txt
src/: ActivationFunctions.hs  Matrix.hs  NN.hs
test/: NNTests.hs
test_stats/: depth_neurons.txt  epochs_batch.csv  stats_to_csv.ipynb
