cabal-version: 3.4
name: NeuralNetwork
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Nicholas Alexander
build-type: Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules: ActivationFunctions, Matrix, NN
  build-depends: base ^>=4.17.2.1, vector, random, array, primitive
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fprof-auto

executable benchmark
  main-is: ./benchmarks/benchmark.hs
  build-depends: base, NeuralNetwork, text, filepath
  default-language: Haskell2010
  ghc-options: -fprof-auto -rtsopts

executable mnist
  main-is: examples/MNIST/mnist.hs
  build-depends: base, NeuralNetwork, bytestring
  default-language: Haskell2010
  ghc-options: -fprof-auto -rtsopts

executable iris
  main-is: examples/IRIS/iris.hs
  build-depends: base, NeuralNetwork, bytestring, cassava
  default-language: Haskell2010
  ghc-options: -fprof-auto -rtsopts

test-suite nntests
  type:                exitcode-stdio-1.0
  main-is:             NNTests.hs
  build-depends:       base, NeuralNetwork, QuickCheck, random
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -fprof-auto